
ChangeLog
   [ + added, - removed, * changed ]

   * (03/Dec/2009) Fixed a bug in 64bit systems where MPI_Request is a pointer. May produce mismatching communications.
                   Added MPItrace_user_function (int) into the headers.
   * (26/Nov/2009) Fixed conversion of caller lines (sampling or MPI)
   * (25/Nov/2009) Fixed access to ptr_statuses which caused to segfault when calling mpi_waitall/mpi_waitsome
   + (04/Nov/2009) Added DLB support for MPI & SMPss applications.
   * (03/Nov/2009) Support of using MPI_STATUS_IGNORE in MPI_Status parameters (MPI_Wait, MPI_Recv, ...)
   * (03/Sep/2009) Fixed matching communications in mpi2prv that made mpi_sendrecv fail.
   * (17/Aug/2009) Fixed MPItrace_nevents to put all events to the same timestamp
                   Changed number of events in buffer in CELL (from 64 to 256).
                   Reduced clock-skew between CPU/SPU in CELL machine.
   * (28/May/2009) Fixed configure checking of mpi fortran decoration type.
   * (28/May/2009) Reverted status of libmpitrace.*. Now contains C & Fortran symbols because some MPI
                    implementations rely their MPI fortran symbols to C symbols (MN/MPICH) and others do
                    not (AIX/POE).
   * (28/May/2009) Changes in calltrace (and similar information). Uniformization of routines and lines:
                    MPI callers, OpenMP outlined routines, pthread called routines, user functions, sampled points
   * (26/May/2009) Fixed Dimemas translation problems related with communicators.
   * (25/May/2009) Fixed a problem with a call to fstat that delays the next event after a flush.
   * (25/May/2009) Fixed problems with the timestamp where the HWC_CHANGE events appeared
   * (25/May/2009) Fixed problems with make-dir in XML parsing. Also added full path to *.mpits file.
   * (25/May/2009) Parallel merge improvements
   * (20/May/2009) IBM MPI implementation does not support calling MPI_Get_count with MPI_STATUS_IGNORE, fix.