@@ -54,9 +54,9 @@ These are the available options for the sequential Paraver merger:
  Partially processes (up to N events) the intermediate trace files to generate the Dimemas tracefile.
  \item {\tt -f FILE.mpits} {\em (where {\tt FILE.mpits} file is generated by the instrumentation)}\\
  The merger uses the given file (which contains a list of intermediate trace files of a single executions) instead of giving set of intermediate trace files.\\
- This option takes only the file name of every intermediate file so as to locate them.
+ This option looks first for each file listed in the parameter file. Each contained file is searched in the absolute given path, if it does not exist, then it's searched in the current directory.
  \item {\tt -f-relative FILE.mpits} {\em (where {\tt FILE.mpits} file is generated by the instrumentation)}\\
- This options works exactly as the -f option.
+ This options behaves like the -f options but looks for the intermediate files in the current directory.
  \item {\tt -f-absolute FILE.mpits} {\em (where {\tt FILE.mpits} file is generated by the instrumentation)}\\
  This options behaves like the -f options but uses the full path of every intermediate file so as to locate them.
  \item {\tt -h}\\
