@@ -44,8 +44,8 @@
   <storage enabled="no">
     <trace-prefix enabled="yes">TRACE</trace-prefix>
     <size enabled="no">5</size>
-    <temporal-directory enabled="yes" make-dir="no">/scratch</temporal-directory>
-    <final-directory enabled="yes" make-dir="no">/gpfs/scratch/bsc41/bsc41273</final-directory>
+    <temporal-directory enabled="yes">/scratch</temporal-directory>
+    <final-directory enabled="yes">/gpfs/scratch/bsc41/bsc41273</final-directory>
     <gather-mpits enabled="no" />
   </storage>
 
