@@ -80,8 +80,8 @@ PM_DATA_FROM_L2, PM_INST_CMPL, PM_DATA_FROM_MEM, PM_LD_MISS_L1_LSU0, PM_1PLUS_PP
   <storage enabled="no">
     <trace-prefix enabled="yes">TRACE</trace-prefix>
     <size enabled="no">5</size>
-    <temporal-directory enabled="yes" make-dir="no">/scratch</temporal-directory>
-    <final-directory enabled="yes" make-dir="no">/gpfs/scratch/bsc41/bsc41273</final-directory>
+    <temporal-directory enabled="yes">/scratch</temporal-directory>
+    <final-directory enabled="yes">/gpfs/scratch/bsc41/bsc41273</final-directory>
     <gather-mpits enabled="no" />
   </storage>
 
