@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii mpi2prv.1
 .\"
-.TH MPI2PRV 1 "MARCH 2009"
+.TH MPI2PRV 1 "DECEMBER 2009"
 .SH NAME
 mpi2prv \- MPI merge facility for the Paraver visualizer tool
 
@@ -77,15 +77,15 @@ Each global operation (MPI_Barrier, MPI_Alltoall, MPI_Reduce...) will generate a
 The mpitrace facility generates a *.mpits file with information of all intermediate files generated by a run. This 
 .B file
 can be used instead of giving the merger several parameters. This feature can be useful when many intermediate files are generated and the shell is not able to handle such quantity of parameters.
-This option takes only the file name of every intermediate file so as to locate them.
+ This option looks first for each file listed in the parameter file. Each contained file is searched in the absolute given path, if it does not exist, then it's searched in the current directory.
 .IP "-f-relative file"
-This option works exactly as the 
+This option works similarly as the 
 .B -f
-option.
+option, but it uses the current path to locate the listed files.
 .IP "-f-absolute file"
 This option behaves similarly than
 .B -f 
-option, but it uses the full path of every intermediate file so as to locate them.
+option, but it uses the full path of every intermediate file so as to locate the listed files.
 .IP "-h"
 Gets a simple help text.
 .IP "-o file"
